[metadata]
name = wodoo
version = 0.2.13
description-file = README.md
DESCRIPTION = 'Odoo Framework'
URL = https://github.com/marcwimmer/wodoo
EMAIL = 'marc@itewimmer.de'
AUTHOR = 'Marc-Christian Wimmer'
REQUIRES_PYTHON = '>=3.6.0'
license='MIT'

[options.entry_points]
console_scripts =
    odoo = wodoo:cli
