[metadata]
name = wodoo
version = 0.2.38
description-file = README.md
DESCRIPTION = Odoo Framework
URL = https://github.com/marcwimmer/wodoo
EMAIL = marc@itewimmer.de
AUTHOR = Marc-Christian Wimmer
license=MIT

[options]
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    odoo = wodoo:cli
